fixed overlap

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -7,20 +7,16 @@
 }
 
 .centermap{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+   margin-top:3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .centerChart{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+   margin-top:3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .chartContainer{
 
